<resources>
    <string name="app_name">TelegramClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_account">Account</string>
    <string name="setting_default_number">+793300211</string>
    <string name="settings_lable_phone_number">Tap to change phone number</string>
    <string name="settings_default_login">UserName</string>
    <string name="settings_lable_login">Username</string>
    <string name="settings_default_bio">About me</string>
    <string name="settings_lable_bio">Bio</string>
    <string name="settings_menu_edit_name">Edit Name</string>
    <string name="settings_menu_exit">Log Out</string>
    <string name="cd_register_image">registerImage</string>
    <string name="register_text_enter_code">Enter the cod</string>
    <string name="register_text_we_sent">We have sent an SMS with a code to Your phone</string>
    <string name="register_hint_default_code">_ _ _ _ _ _</string>
    <string name="register_title_your_phone">Your phone number</string>
    <string name="register_toast_enter_phone">Enter your phone number</string>
    <string name="register_phone_hint">+11111111111</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_sername">Surname</string>
    <string name="setting_toast_name_is_empty">The name cannot be empty</string>
    <string name="toast_data_update">Data update</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="chat_enter_a_message">Enter a message</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="create_group">Create Group</string>
</resources>