<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/settingsUserPhoto"
        android:layout_width="@dimen/settings_user_photo_width"
        android:layout_height="@dimen/settings_user_photo_height"
        android:src="@drawable/default_photo"
        app:civ_border_width="@dimen/settings_user_photo_border"
        app:civ_circle_background_color="@color/color_accent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"/>

    <TextView
        android:id="@+id/settingsUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Pavel"
        app:layout_constraintStart_toEndOf="@id/settingsUserPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settingsUserPhoto"
        android:layout_marginTop="@dimen/vertical_margin"
        android:textSize="@dimen/normalText"
        android:layout_marginStart="@dimen/horizontal_margin"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/color_accent_darck"
            android:text="online"
            app:layout_constraintStart_toEndOf="@id/settingsUserPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsUserName"

            android:textSize="@dimen/smallText"
            android:layout_marginStart="@dimen/horizontal_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settingsTextAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary"
        app:layout_constraintTop_toBottomOf="@id/settingsHeader"
        android:text="@string/settings_account"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:textStyle="bold"
        android:textSize="@dimen/smallText"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bSettingsChangeNumberPhone"
        app:layout_constraintTop_toBottomOf="@id/settingsTextAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settingsPhoneNumber"
            app:layout_constraintTop_toTopOf="@id/bSettingsChangeNumberPhone"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/setting_default_number"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settingsLabelPhoneNumber"
            app:layout_constraintTop_toBottomOf="@id/settingsPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_lable_phone_number"
            style="@style/smallText" />
        
        <View
            app:layout_constraintTop_toBottomOf="@id/settingsLabelPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bSettingsChangeLogin"
        app:layout_constraintTop_toBottomOf="@id/bSettingsChangeNumberPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settingsLogin"
            app:layout_constraintTop_toTopOf="@id/bSettingsChangeLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_default_login"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settingsLabelLogin"
            app:layout_constraintTop_toBottomOf="@id/settingsLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_lable_login"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settingsLabelLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bSettingsChangeBio"
        app:layout_constraintTop_toBottomOf="@id/bSettingsChangeLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settingsBio"
            app:layout_constraintTop_toTopOf="@id/bSettingsChangeBio"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_default_bio"
            style="@style/normalText" />

        <TextView
            android:id="@+id/settingsLabelBio"
            app:layout_constraintTop_toBottomOf="@id/settingsBio"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_lable_bio"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settingsLabelBio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>